# Agents

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Agent Breakdown  CreateKnowledgeBase.ipynb  Dockerfile  FILE_BREAKDOWN.md  README.md  architecture-diagram.txt  chatbot_RAG.ipynb  config.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  system_message_jaded_rose_chatbot.txt
Agent-rag_retrieval/: .env.example  LICENSE  README.md  config.yaml.example  main.py  pyproject.toml  requirements.txt
Agent-rag_retrieval/agent/: __init__.py  cli.py  rag_agent.py
Agent-rag_retrieval/tests/: test_rag_agent.py
Agents/: .gitignore  __init__.py  cli.py  rag_agent.py
Agents/agent/: config.py  knowledge_base.py
Agents/knowledge_base/documents/: company_info.txt  return_policy.md
Agents/notebooks/: rag_agent_demo.ipynb
Agents/tests/: test_config.py
CommLinkIO/scripts/: run_gmail_inbox_watch_trigger.py
CommLinkIO/src/commlinkio/: __init__.py
CommLinkIO/src/commlinkio/core/: __init__.py
CommLinkIO/src/commlinkio/gmail/clients/: watch_client.py
CommLinkIO/src/commlinkio/telegram/: __init__.py
CommLinkIO/src/commlinkio/tools/: json_extract.py
CommLinkIO/tests/: test_json_extractor.py
CommsIO/: .gitignore  README.md  pyproject.toml  telegram.py
CommsIO/scripts/: run_json_extract.py  run_telegram_send.py  run_telegram_updates_trigger.py
CommsIO/src/commlinkio/core/: json_extractor.py
CommsIO/src/commlinkio/gmail/clients/: __init__.py
CommsIO/src/commlinkio/gmail/functions/: __init__.py
CommsIO/src/commlinkio/gmail/triggers/: inbox_watch_trigger.py
CommsIO/src/commlinkio/telegram/clients/: __init__.py  bot_client.py
CommsIO/src/commlinkio/telegram/functions/: messages.py
CommsIO/src/commlinkio/telegram/readers/: updates.py
CommsIO/src/commlinkio/telegram/tools/: __init__.py  send.py
CommsIO/src/commlinkio/telegram/triggers/: __init__.py
CommsIO/src/commlinkio/tools/: __init__.py
CommsIO/tests/: test_json_extract_cli.py  test_telegram_functions.py  test_telegram_send_cli.py  test_workflow_mirror_text.py
agent/: config.py  knowledge_base.py  rag_agent.py
agent_tools/: __init__.py  pinecone.py  simple_memory.py
agents/: __init__.py  cli.py  config.py  helpers.py  knowledge_base.py  rag_agent.py
comms/: __init__.py  gmail.py
knowledge_base/: ingest.py
knowledge_base/documents/: faq.txt
prompts/: input_guardrail.txt  system_message.txt
scripts/: run_agent.py  run_heartbeat.py  run_telegram.py
src/: google.py  heartbeat.py  pinecone.py  telegram.py
src/agent/: __init__.py
src/agent/core/: __init__.py  engine.py
src/agent/tools/: __init__.py  run.py
src/agent/triggers/: __init__.py
tests/: test_cli.py  test_engine.py  test_google.py  test_json_information_extractor.py  test_pinecone_retrieve.py  test_pinecone_upload.py  test_telegram_trigger.py
tools/: json_information_extractor.py
tools/pinecone/: retrieve.py
workflows/KastroAI/: CreateKnowledgeBase.ipynb  __init__.py
(+5 files in other folders)
