[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboautomations"
version = "0.1.0"
description = "Importable workflow, comms, and agent modules."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "chromadb>=0.5.0",
  "PyYAML>=6.0.0",
  "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "comms*", "agent_tools*"]
