[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentai-rag-retrieval"
version = "0.1.0"
description = "Retrieval-augmented AI agent using OpenAI and ChromaDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.14.0",
  "chromadb>=0.4.22",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "tiktoken>=0.6.0",
  "jupyter>=1.0.0",
  "ipykernel>=6.29.0",
]

[project.scripts]
agentai-rag = "agent.cli:main"

[tool.setuptools]
packages = ["agent"]
